[build-system]
requires = [
    "setuptools",
    "pybind11",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = [
    "version",
    "readme",
]
name = "pyvpmr"
description = "The VPMR Algorithm"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "vpmr",
    "kernel function",
    "convolution",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy",
    "matplotlib",
]
authors = [{ name = "Theodore Chang", email = "tlcfem@gmail.com" }]
maintainers = [{ name = "Theodore Chang", email = "tlcfem@gmail.com" }]

[project.urls]
Homepage = "https://github.com/TLCFEM/vpmr"
"Bug Reports" = "https://github.com/TLCFEM/vpmr/issuess"
Source = "https://github.com/TLCFEM/vpmr"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["*pp*"]

[[tool.cibuildwheel.overrides]]
select = "*macosx*"
before-all = "brew install tbb mpfr gmp"

[[tool.cibuildwheel.overrides]]
select = "*manylinux*"
before-all = "yum install -y gcc-c++ tbb-devel mpfr-devel gmp-devel"

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = "apk add g++ onetbb-dev mpfr-dev gmp-dev"
